<?xml version="1.0" encoding="utf-8"?>


<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/background"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:fillViewport="true"
    android:orientation="vertical"
    tools:context=".MainActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" android:orientation="vertical" >

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"
                >
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">
                    <TextView
                        android:id="@+id/tv_SoftwareInfo"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="5dp"
                        android:layout_marginRight="10dp"
                        android:text="Software Info : "
                        android:textColor="@android:color/white"
                        android:textSize="12sp" />

                    <TextView
                        android:id="@+id/tv_LicenseInfo"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="5dp"
                        android:layout_marginRight="10dp"
                        android:layout_marginBottom="5dp"
                        android:text="License Info : "
                        android:textColor="@android:color/white"
                        android:textSize="12sp" />

                </LinearLayout>

               </FrameLayout>
    <TextView
        android:id="@+id/tv_Reader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="5dp"
        android:layout_marginRight="10dp"
        android:text="Reader : "
        android:textColor="@android:color/black"
        android:textSize="14sp" />

        <ImageView
            android:id="@+id/iv_Photo"
            android:layout_width="140dp"
            android:layout_height="180dp"
            android:layout_gravity="center"
            app:srcCompat="@mipmap/ic_launcher"
            />




    <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal" >

    <TextView
        android:id="@+id/Card_id"
        android:layout_width="59dp"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:layout_weight="1"
        android:padding="5dp"
        android:text="@string/card_id"
        android:textSize="18sp"
        />

    <TextView
        android:id="@+id/card_id_result"
android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="3"
        android:padding="5dp"
        android:layout_margin="5dp"
        android:textSize="18sp"
        />

</LinearLayout>


<LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

    <TextView
        android:id="@+id/fl_name"
        android:layout_width="61dp"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:layout_weight="1"
        android:padding="5dp"
        android:text="@string/fname_lname"
        android:textSize="18sp"

        />

        <TextView
            android:id="@+id/flname_result"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:padding="5dp"
            android:layout_margin="5dp"
            android:textSize="18sp"
            />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/Sex"
            android:layout_width="23dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="0dp"
            android:layout_weight="1"
            android:padding="5dp"
            android:text="@string/sex"
            android:textSize="18sp"
            />

    <TextView
        android:id="@+id/sex_result"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="3"
        android:padding="5dp"
        android:textSize="18sp"
android:layout_marginStart="50dp"
        android:layout_marginEnd="10dp"


        />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/Date_of_birth"
            android:layout_width="40dp"

            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:padding="5dp"
            android:text="@string/date_of_birth"
            android:textSize="18sp"
            />


    <TextView
        android:id="@+id/dob_result"

        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="3"
        android:padding="5dp"
        android:textSize="18sp"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="5dp"

        />
    </LinearLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/Date_Issue"
            android:layout_width="63dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:layout_weight="1"
            android:padding="5dp"
            android:text="@string/date_issue"
            android:textSize="18sp"
            />

    <TextView
        android:id="@+id/date_issue_result"

        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="3"
        android:padding="5dp"
        android:textSize="18sp"
        android:layout_marginStart="1dp"
        android:layout_marginEnd="10dp"

        />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/Date_Expire"
            android:layout_width="67dp"

            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="1dp"
            android:layout_weight="1"
            android:padding="5dp"
            android:text="@string/date_expire"
            android:textSize="18sp"

            />

        <TextView
            android:id="@+id/date_exp_result"

            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:padding="5dp"
            android:textSize="18sp"
            android:layout_marginStart="1dp"
            android:layout_marginEnd="10dp"

            />

    </LinearLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/address"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="1dp"
            android:layout_weight="1"
            android:padding="5dp"
            android:text="@string/address"
            android:textSize="18sp" />
        <TextView
            android:id="@+id/address_result"
            android:layout_width="0dp"
            android:layout_height="80dp"

            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:layout_weight="3"
            android:padding="5dp"
            android:textSize="18sp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="10dp"
            />
    </LinearLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:id="@+id/bt_SelectReader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:text="@string/bt_SelectReader"
            android:textAllCaps="false"
            android:textSize="15sp" />

        <Button
            android:id="@+id/bt_Read"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:text="@string/bt_Read"
            android:textAllCaps="false"
            android:textSize="15sp" />
        <Button
            android:id="@+id/bt_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:text="@string/bt_email"
            android:textAllCaps="false"
            android:textSize="15sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

    <Button
        android:id="@+id/bt_UpdateLicense"
        android:layout_width="wrap_content"
android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_weight="2"
        android:text="@string/bt_License"
        android:textAllCaps="false"
        android:textSize="14sp"
        android:visibility="gone"
        />

    <Button
        android:id="@+id/bt_Exit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_weight="2"
        android:text="@string/bt_Exit"
        android:textAllCaps="false"
        android:textSize="14sp" />

    </LinearLayout>


    <TextView
        android:id="@+id/tv_Result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:textSize="14sp"
        android:visibility="gone"
        />


    </LinearLayout>


</ScrollView>
